    deb.debian.org. Also switch the default build apt source to use
    deb.debian.org
  * Add command-line config for addition of firmware packages, and update
    the docs about Customising Packages
  * In the standard customise script, generate lists of the packages
    installed in the image, and their sources.
  * Change to how apt-ftparchive is called, so the installer will
    work. This was the cause of #865015
  * Tweak the size of the isolinux menu so long menus will display
    better. This was the cause of #861421
  * Add support for specifying the Volume ID of the output image.
    Closes: #865384
  * Set the mode of the ISO root dir to 0755 (rwxr-xr-x).
    Closes: #865386

 -- Steve McIntyre <93sam@debian.org>  Wed, 19 Jul 2017 15:12:45 +0100

live-wrapper (0.6+nmu2) unstable; urgency=medium

  * Non-maintainer upload.
  * Remove incorrect instance of converting to UTF-8.
  * Eliminate 'pyversions' warnings at build time.
  * Add 'python-requests' build dependency. Fixes docs build.
  * Add 'squashfs-tools' dependency. (Closes: #867282).

 -- Phil Wyett <philwyett@kathenas.org>  Fri, 14 Jul 2017 04:43:06 +0100

live-wrapper (0.6+nmu1) unstable; urgency=medium

  * Non-maintainer upload.
  * Add a dependency on python-pycurl, needed by lwr (closes: #861994)
  * Add Build-Depends: python-apt, python-cliapp, vmdebootstrap needed to
    completely build the lwr autodoc

 -- Florian Schlichting <fsfs@debian.org>  Tue, 16 May 2017 23:31:36 +0200

live-wrapper (0.6) unstable; urgency=medium

  [ Ana C. Custura ]
  * Removed memtest86+ and HDT due to compatibility issues with EFI boot
    (Closes: #813527, #846637)
  * Added main menu title and submenu generation for bootloaders
  * Added localised live boot options
  * Added installer with speech synthesis boot option
  * Fixed issues with graphical installer on isolinux boot (Closes: #846631)

  [ Iain R. Learmonth ]
  * lwr binary is now a generated entry point