@@ -1,4 +1,6 @@
 #!/bin/bash
+# customise script for live-wrapper, passed to vmdebootstrap as part
+# of the live build
 
 set -e
 
@@ -17,13 +19,23 @@ cat /etc/resolv.conf > ${rootdir}/etc/resolv.conf
 
 prepare_apt_source "${LWR_MIRROR}" "${LWR_DISTRIBUTION}"
 
-${LWR_EXTRA_PACKAGES} task-laptop task-english libnss-myhostname
 for PKG in ${FIRMWARE_PKGS}; do
     echo "$PKG        $PKG/license/accepted       boolean true" | \
-       chroot ${rootdir} debconf-set-selections
+	chroot ${rootdir} debconf-set-selections
 done
 
 chroot ${rootdir} apt-get -q -y install initramfs-tools live-boot live-config ${LWR_TASK_PACKAGES} ${LWR_EXTRA_PACKAGES} ${LWR_FIRMWARE_PACKAGES} task-laptop task-english libnss-myhostname >> vmdebootstrap.log 2>&1
+
+# Work out what extra packages we need for the installer to work Need
+# to run these one at a time, as some of them may conflict if we ask
+# apo to install them all together (e.g. grub-efi-$ARCH and grub-pc)
+if [ "${LWR_BASE_DEBS}"x != ""x ] ; then
+    for PKG in ${LWR_BASE_DEBS}; do
+	chroot ${rootdir} apt-get -q -s -u install --reinstall $PKG | awk '/^Inst/ {print $2}' >> base_debs.$PKG.list
+    done
+    sort -u base_debs.*.list > base_debs.list
+    rm -f base_debs.*.list
+fi
 
 # Temporary fix for #843983
 chroot ${rootdir} chmod 755 /
